--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -6,7 +6,7 @@
 }
 
 header {
-    padding: 13px 0 13px 0;
+    padding: 13px 5px 13px 5px;
     border-bottom: 5px solid #FEC804;
     color: #FEC804;
     background: #333333;
