header финал поменял цвета фона и толщину границы

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -7,8 +7,8 @@
 
 header {
     padding: 13px 5px 13px 5px;
-    border-bottom: 5px solid #FEC804;
-    color: #FEC804;
-    background: #333333;
+    border-bottom: 4px solid #fec804;
+    color: #fec804;
+    background: #2f2f33;
     font-size: 30px;
 }
