--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -25,3 +25,9 @@ header {
     padding: 10px 0 0 210px;
     background: #f0f0f0;
 }
+
+.statusPanel {
+    padding: 5px 0px 5px 5px;
+    background: #2f2f33;
+    color: white;
+}
