--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -2,9 +2,15 @@
 * {
     margin: 0px;
     padding: 0px;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
+/* Задание основным параметров */
+body {
+    font-family: Arial, sans-serif;
+    font-size: 13px;
+}
+
+/* Стили заголовка */
 header {
     padding: 13px 5px 13px 5px;
     border-bottom: 4px solid #fec804;
@@ -13,19 +19,35 @@ header {
     font-size: 30px;
 }
 
+/* Стили левой панели Меню */
 .leftPanel {
     width: 200px;
-    padding: 10px 0px 0px 5px;
+    /* padding: 10px 0px 0px 0px; */
     background: #2f2f33;
     color: white;
     float: left;
 }
 
+li {
+    border-top: 1px solid rgba(255, 255, 255, 0.15);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.35);
+}
+
+a {
+    color: white;
+    text-decoration: none;
+    display: block;
+    margin-left: 10px;
+    padding: 11px 48px 11px 0px;
+}
+
+/* Стили основной рабочей области */
 .workPanel {
     padding: 10px 0 0 210px;
     background: #f0f0f0;
 }
 
+/* Стили подвала */
 .statusPanel {
     padding: 5px 0px 5px 5px;
     background: #2f2f33;
