--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -4,6 +4,10 @@
     padding: 0px;
 }
 
+header, .leftPanel, .statusPanel {
+    background: #2f2f33;
+}
+
 /* Задание основным параметров */
 body {
     font-family: Arial, sans-serif;
@@ -13,71 +17,21 @@ body {
 /* Стили заголовка */
 header {
     padding: 13px 5px 13px 5px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.35);
+    position: relative;
     border-bottom: 4px solid #fec804;
     color: #fec804;
-    background: #2f2f33;
     font-size: 30px;
-}
-
-/* Стили левой панели Меню */
-.leftPanel {
-    width: 200px;
-    /* padding: 10px 0px 0px 0px; */
-    background: #2f2f33;
-    color: white;
-    float: left;
-}
-
-li {
-    border-top: 1px solid rgba(255, 255, 255, 0.15);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.35);
-}
-
-a {
-    color: white;
-    text-decoration: none;
-    display: block;
-    margin-left: 10px;
-    padding: 11px 48px 11px 0px;
-    line-height: 20px;
-}
-
-span {
-    font-size: 24px;
-    width: 24px;
-    height: 24px;
-    color: #fff;
-    margin: 0 8px;
-    float: left;
-}
-.icon-files-empty {
-    color: #FEC40E;
-}
-.icon-database {
-    color: rgb(2, 192, 192)
-}
-.icon-users {
-    color: #FD7E01;
-}
-.icon-truck {
-    color: #BABAB8;
-}
-.icon-envelope {
-    color: #8696AE;
-}
-.icon-stats-dots {
-    color: #00DB00;
 }
 
 /* Стили основной рабочей области */
 .workPanel {
     padding: 10px 0 0 210px;
-    background: #f0f0f0;
+    background: white;
 }
 
 /* Стили подвала */
 .statusPanel {
     padding: 5px 0px 5px 5px;
-    background: #2f2f33;
     color: white;
 }
